# pascal

./: .env.example  .gitignore  README.md  run-dev.sh
modules/esp8266/: README.md  platformio.ini  send-motion.sh
modules/esp8266/src/: esp_http_server.cpp  esp_http_server.hpp  hub_logger.cpp  hub_logger.hpp  main.cpp  motion.hpp  motor_controller.cpp  motor_controller.hpp
modules/hub/: __init__.py  config.py  movement.py  pyproject.toml  schemas.py  server.py  webrtc.py
modules/interfaces/controller/: main.py
modules/interfaces/mobile/ios/PascalMobile/: AppDelegate.swift  Info.plist  ViewController.swift
modules/interfaces/mobile/ios/PascalMobile.xcodeproj/: project.pbxproj
